change save access token in localstorage to http cookie only